--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
+    "resend": "^4.6.0",
     "zod": "^4.0.5"
   },
   "devDependencies": {
