--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.11.1",
+    "@radix-ui/react-label": "^2.1.7",
+    "@tabler/icons-react": "^3.34.0",
     "@types/bcrypt": "^5.0.2",
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
