--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-toastify": "^11.0.5",
     "resend": "^4.6.0",
     "tailwind-merge": "^3.3.1",
+    "youtube-search-api": "^2.0.0",
     "zod": "^4.0.5"
   },
   "devDependencies": {
