--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "resend": "^4.6.0",
     "tailwind-merge": "^3.3.1",
     "youtube-search-api": "^2.0.0",
+    "ytdl-core": "^4.11.5",
     "zod": "^4.0.5"
   },
   "devDependencies": {
