--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-player": "^3.3.1",
     "react-toastify": "^11.0.5",
     "resend": "^4.6.0",
     "tailwind-merge": "^3.3.1",
